<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- App logistics -->
    <string name="app_name">Reach</string>

    <!--Shared Preferences-->
    <string name="preference_file_key">settings</string>
    <string name="convert_to_fahrenheit">f_on</string>
    <string name="tempPermission">temp_notif</string>
    <string name="motionPermission">motion_notif</string>
    <string name="lightPermission">light_notif</string>
    <string name="connectedPermission">add_notif</string>
    <string name="disconnectedPermission">remove_notif</string>
    <string name="batteryPermission">batt_notif</string>
    <string name="tempOutside">temp_outside</string>
    <string name="fahrenheit_temp_bound">f_notif_on</string>
    <string name="tempLowBound">temp_low</string>
    <string name="tempHighBound">temp_high</string>
    <string name="lightOutside">light_outside</string>
    <string name="lightLowBound">light_low</string>
    <string name="lightHighBound">light_high</string>
    <string name="motionWhenDetected">motion_is_detected</string>

    <!-- Bluetooth Activity -->
    <string name="Bluetooth_label">Bluetooth Setup</string>
    <string name="Bluetooth_button_setup"> Network Configuration</string>
    <string name="Bluetooth_list_paired_devices">Paired Devices</string>
    <string name="Bluetooth_button_scan_devices">Scan for Devices</string>
    <string name="Bluetooth_list_available_devices">Available Devices</string>
    <string name="Bluetooth_move_network">Move to Network</string>
    <string name="Bluetooth_error_scan">Unable to find bluetooth devices</string>
    <string name="Bluetooth_error_connect">Unable to connect to device</string>
    <string name="Bluetooth_error_support">Bluetooth not supported on this device</string>
    <string name="Bluetooth_not_connected">You are not connected to a device</string>
    <string name="Bluetooth_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="Bluetooth_title_connecting">connecting&#8230;</string>
    <string name="Bluetooth_title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="Bluetooth_title_not_connected">not connected</string>
    <string name="welcome_title">Welcome to Reach</string>
    <string name="welcome_instr">Tap below to connect to the Hub.</string>


    <!--  DeviceList -->
    <string name="scanning">Scanning for devices&#8230;</string>
    <string name="select_device">Select the Reach Hub to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>


    <!-- ToolBar Activities -->
    <string name="navigation_action_notifications">Notifications</string>
    <string name="navigation_action_bluetooth">Bluetooth Status</string>
    <string name="navigation_action_discovery">Make discoverable</string>

    <!-- Navigation Drawer Activity-->
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="navigation_label_intern">MeshNetwork Intern Team</string>
    <string name="navigation_label_purpose_application">Purpose and Applications</string>
    <string name="navigation_label_hardware">Hardware Specs</string>
    <string name="navigation_title_sensors">Sensors</string>
    <string name="navigation_label_sensor_motion">Motion</string>
    <string name="navigation_label_sensor_temp">Temperature</string>
    <string name="navigation_label_sensor_light">Ambient Light</string>
    <string name="navigation_label_added">Node Connected</string>
    <string name="navigation_label_removed">Node Disconnected</string>
    <string name="navigation_router_description">Router</string>
    <string name="navigation_node_description">Node</string>
    <string name="navigation_bluetooth_status">Bluetooth status</string>


    <!-- Network Activity -->
    <string name="Network_label">Network</string>
    <string name="Network_sensor_0">Sensor 0</string>
    <string name="Network_sensor_1">Sensor 1</string>
    <string name="Network_sensor_2">Sensor 2</string>


    <!-- Sensor Activities from Nav Bar -->
    <string name="display0">\u0020\u0020\u0020data</string>
    <string name="display1">\u0020\u0020\u0020data</string>
    <string name="display2">\u0020\u0020\u0020data</string>


    <!-- Notifications Create Edit Activity -->
    <string name="temp_popup_title">Temperature Notifications</string>
    <string name="notify_if">Notify if </string>
    <string name="range"> range:</string>
    <string name="motion_popup_title">Motion Detector Notifications</string>
    <string name="motion_notify_if">Notify if motion </string>
    <string name="detected"> detected.</string>
    <string name="SAVE">SAVE</string>
    <string name="deg_C">°C</string>
    <string name="slash"> / </string>
    <string name="deg_F">°F</string>
    <string name="lower">lower</string>
    <string name="upper">upper</string>
    <string name="light_popup_title">Ambient Light Notifications</string>
    <string name="percent">%</string>
    <string-array name="temp_spinner_entries">
        <item>within</item>
        <item>outside</item>
    </string-array>
    <string-array name="motion_spinner_entries">
        <item>is</item>
        <item>is not</item>
    </string-array>

    <!-- Network Diagram -->
    <string name="temperature">Temperature:</string>
    <string name="motion">Motion:</string>
    <string name="ambient_light">Ambient Light:</string>
    <string name="neighboring_nodes">Neighboring Nodes:</string>
    <string name="low_batt">Low Battery!</string>

    <!-- Alert Dialogs -->
    <string name="not_compatible">Reach Is Not Compatible With Your Device</string>
    <string name="does_not_support">Your phone does not support Bluetooth.</string>
    <string name="exit">EXIT</string>
    <string name="location_permission_title">Location Permission Needed</string>
    <string name="location_permission_content">Please allow location permission for Bluetooth device discovery.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Notification Content -->
    <string name="motion_alert">: Motion Alert</string>
    <string name="motion_is_detected">Motion is detected.</string>
    <string name="motion_is_not_detected">Motion is not detected.</string>
    <string name="temperature_alert">: Temperature Alert</string>
    <string name="light_alert">: Ambient Light Alert</string>
    <string name="battery_low">: Battery Low</string>
    <string name="charge_node">Charge node battery.</string>
</resources>

