<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popup_background"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/closeButton_motion"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:paddingRight="10dp"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:selectAllOnFocus="true"
            android:text="@string/motion_popup_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@null"
            android:textStyle="bold"
            android:visibility="visible" />

        <Space
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:paddingRight="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/motion_notify_if"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/motion_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/motion_spinner_entries"
            android:spinnerMode="dialog"
            android:theme="@style/Theme.NoTitleBar.WhiteOnDarkSpinners" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detected"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/motion_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@android:color/transparent"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:paddingRight="8dp"
            android:text="@string/SAVE"
            android:textAlignment="textEnd"
            android:textColor="#D3D3D3"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>