<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:paddingRight="10dp"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <EditText
            android:id="@+id/nameEditText"
            android:selectAllOnFocus="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            app:srcCompat="@android:drawable/ic_menu_edit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.06"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:foregroundGravity="right"
                android:paddingRight="5dp"
                app:srcCompat="@drawable/ic_rssi" />

            <TextView
                android:id="@+id/rssiLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:text="RSSI: "
                android:textAlignment="textEnd"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/rssiDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/tempIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            app:srcCompat="@drawable/ic_temp_sensor" />

        <ImageView
            android:id="@+id/lightIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            app:srcCompat="@drawable/ic_light_sensor" />

        <ImageView
            android:id="@+id/motionIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_row="0"
            app:srcCompat="@drawable/ic_motion_sensor" />

        <TextView
            android:id="@+id/tempLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/temperature"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lightLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/ambient_light"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/motionLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/motion"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tempDisplay"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/motionDisplay"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/lightDisplay"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </GridLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="7dp"
        android:paddingTop="10dp"
        android:text="@string/neighboring_nodes"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="15dp">

        <LinearLayout
            android:id="@+id/neighborView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</LinearLayout>